--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
+    <link rel="shortcut icon" href="./favicon.ico" type="image/x-icon" />
     <link
       rel="stylesheet"
       href="https://use.fontawesome.com/releases/v5.7.2/css/all.css"
@@ -17,15 +18,24 @@
     <form>
       <div class="form__question question-one">
         <h3 class="form__question--title">Im a question, Look at me ! \o/</h3>
-        <input type="text" placeholder="Placeholder" required />
+        <div class="form__input-field">
+          <input type="text" placeholder="Placeholder" required />
+          <i class="far fa-arrow-alt-circle-right fa-3x"></i>
+        </div>
       </div>
       <div class="form__question question-two  inactive">
         <h3 class="form__question--title">Im a question, Look at me ! \o/</h3>
-        <input type="text" placeholder="Placeholder" required />
+        <div class="form__input-field">
+          <input type="text" placeholder="Placeholder" required />
+          <i class="far fa-arrow-alt-circle-right fa-3x"></i>
+        </div>
       </div>
       <div class="form__question question-three inactive">
         <h3 class="form__question--title">Im a question, Look at me ! \o/</h3>
-        <input type="text" placeholder="Placeholder" required />
+        <div class="form__input-field">
+          <input type="text" placeholder="Placeholder" required />
+          <i class="far fa-arrow-alt-circle-right fa-3x"></i>
+        </div>
       </div>
     </form>
 
