basic validation and next question rendering

--- a/index.html
+++ b/index.html
@@ -17,21 +17,41 @@
   <body>
     <form>
       <div class="form__question question-one">
-        <h3 class="form__question--title">Im a question, Look at me ! \o/</h3>
+        <h3 class="form__question--title">Question 1, Hello</h3>
+        <span class="error-message"></span>
         <div class="form__input-field">
           <input type="text" placeholder="Placeholder" required />
           <i class="far fa-arrow-alt-circle-right fa-3x"></i>
         </div>
       </div>
       <div class="form__question question-two  inactive">
-        <h3 class="form__question--title">Im a question, Look at me ! \o/</h3>
+        <h3 class="form__question--title">Here comes question Two !</h3>
+        <span class="error-message"></span>
+        <div class="form__input-field">
+          <span class="error-message"></span>
+          <input type="text" placeholder="Placeholder" required />
+          <i class="far fa-arrow-alt-circle-right fa-3x"></i>
+        </div>
+      </div>
+      <div class="form__question question-three inactive">
+        <h3 class="form__question--title">Question Three, look at me !</h3>
+        <span class="error-message"></span>
+        <div class="form__input-field">
+          <input type="text" placeholder="Placeholder" required />
+          <i class="far fa-arrow-alt-circle-right fa-3x"></i>
+        </div>
+      </div>
+      <div class="form__question question-four inactive">
+        <h3 class="form__question--title">Question Four, dab \o\</h3>
+        <span class="error-message"></span>
         <div class="form__input-field">
           <input type="text" placeholder="Placeholder" required />
           <i class="far fa-arrow-alt-circle-right fa-3x"></i>
         </div>
       </div>
       <div class="form__question question-three inactive">
-        <h3 class="form__question--title">Im a question, Look at me ! \o/</h3>
+        <h3 class="form__question--title">Question Five, we're done here</h3>
+        <span class="error-message"></span>
         <div class="form__input-field">
           <input type="text" placeholder="Placeholder" required />
           <i class="far fa-arrow-alt-circle-right fa-3x"></i>
