minor fixes and styling

--- a/index.html
+++ b/index.html
@@ -54,30 +54,35 @@
         <h3 class="form__question--title">Name of Department</h3>
         <div class="form__input-field">
           <i class="far fa-arrow-alt-circle-left fa-3x"></i>
-          <input name="question3" type="text" placeholder="e.g. IT" required />
+          <input
+            name="question3"
+            type="text"
+            placeholder="e.g. Insurance, Loans"
+            required
+          />
           <i class="far fa-arrow-alt-circle-right fa-3x"></i>
         </div>
       </div>
       <div class="form__question question-four inactive">
-        <h3 class="form__question--title">Query Title</h3>
+        <h3 class="form__question--title">Question Title</h3>
         <div class="form__input-field">
           <i class="far fa-arrow-alt-circle-left fa-3x"></i>
           <input
             name="question4"
             type="text"
-            placeholder="Placeholder"
+            placeholder="e.g. current rates"
             required
           />
           <i class="far fa-arrow-alt-circle-right fa-3x"></i>
         </div>
       </div>
       <div class="form__question question-three inactive">
-        <h3 class="form__question--title">Question Five, we're done here</h3>
+        <h3 class="form__question--title">Additional Information</h3>
         <div class="form__input-field">
           <i class="far fa-arrow-alt-circle-left fa-3x"></i>
           <textarea
             name="question5"
-            placeholder="Placeholder"
+            placeholder="comments and details"
             required
           ></textarea>
           <i class="far fa-arrow-alt-circle-right fa-3x"></i>
