--- a/index.html
+++ b/index.html
@@ -4,13 +4,8 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
-    <link rel="shortcut icon" href="./favicon.ico" type="image/x-icon" />
-    <link
-      rel="stylesheet"
-      href="https://use.fontawesome.com/releases/v5.7.2/css/all.css"
-      integrity="sha384-fnmOCqbTlWIlj8LyTjo7mOUStjsKC4pOpQbqyi7RrhN7udi9RwhKkMHpvLbHG9Sr"
-      crossorigin="anonymous"
-    />
+    <link rel="shortcut icon" href="./assets/favicon.ico" type="image/x-icon" />
+    <link rel="stylesheet" href="./assets/css/all.css" />
     <link rel="stylesheet" href="style.css" />
     <title>Swedbank Task</title>
   </head>
@@ -43,10 +38,7 @@
         <h3 class="form__question--title">Category</h3>
         <div class="form__input-field options">
           <i class="far fa-arrow-alt-circle-left fa-3x"></i>
-          <select name="question2" id="account-plan" required>
-            <!-- <option value="gold">Gold</option>
-            <option value="platinum">Platinum</option> -->
-          </select>
+          <select name="question2" id="account-plan" required> </select>
           <i class="far fa-arrow-alt-circle-right fa-3x"></i>
         </div>
       </div>
